deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rohan-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rohan-app
  template:
    metadata:
      labels:
        app: rohan-app
    spec:
      containers:
      - name: rohan-container
        image: rohangusinge1712/rohan-devops-app:latest
        ports:
        - containerPort: 80

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
