green-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rohan-app-green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rohan-app-green
  template:
    metadata:
      labels:
        app: rohan-app-green
    spec:
      containers:
      - name: rohan-container
        image: rohangusinge1712/rohan-devops-app:latest
        ports:
        - containerPort: 80

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5

        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
