service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rohan-service
spec:
  type: NodePort
  selector:
    app: rohan-app-green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007
